syntax = "proto3";

option csharp_namespace = "RabbitMQ.Demo.F1.EventProducer";

package f1;

// The greeting service definition.
service F1EventHandler {
  // Sends a greeting
  rpc ProcessRaceEvent (RaceRequest) returns (RaceResponse);
}



message RaceRequest{
	RaceEventStatus event=1;
	string description=2;
}
message RaceResponse{
	RaceEventResponseStatus status=1;
	string message = 2;
}

enum RaceEventStatus {
  RACE_EVENT_STATUS_START_RACE = 0;
  RACE_EVENT_STATUS_STOP_RACE = 1;
  RACE_EVENT_STATUS_CONTINUE_RACE = 2;
  RACE_EVENT_STATUS_START_YELLOW_FLAGS_RACE = 3;
  RACE_EVENT_STATUS_STOP_YELLOW_FLAGS_RACE = 4;
  RACE_EVENT_STATUS_DEPLOY_VIRTUAL_SAFTY_CAR_RACE = 5;
  RACE_EVENT_STATUS_UNDEPLOY_VIRTUAL_SAFTY_CAR_RACE = 6;  
  RACE_EVENT_STATUS_DEPLOY_SAFTY_CAR_RACE = 7;
  RACE_EVENT_STATUS_UNDEPLOY_SAFTY_CAR_RACE = 8; 
  RACE_EVENT_STATUS_END_RACE = 9;
}

enum RaceEventResponseStatus{
	RACE_EVENT_RESPONSE_STATUS_SUCCESS=0;
	RACE_EVENT_RESPONSE_STATUS_BAD_REQUEST=1;
	RACE_EVENT_RESPONSE_STATUS_NOT_FOUND=2;
}
